Make classes immutable